# cli-file-organizer

./: .gitignore  README.md  pyproject.toml
organizer/: config.json  file_organizer.py  main.py
