[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer"
version = "0.1.0"
description = "A CLI tool that organizes files into folders based on file type"

authors = [
    { name = "Yassine REZGUI" }
]

readme = "README.md"

requires-python = ">=3.8"

dependencies = [
    "pyfiglet",
    "tqdm"
]

[project.scripts]
file-organizer = "organizer.main:main"